Revision history for MooseX-Types

0.24    Sat Sep 11 19:59:18 CEST 2010
        - Avoid more warnings from Moose 1.09 in tests (Dave Rolsky).

0.23    Tue Jul 20 02:18:37 CEST 2010
        - Avoid warnings from Moose 1.09 in tests (Dave Rolsky).

0.22    Tue Jun  1 20:10:12 CEST 2010
        - Update docs to mention MRO::Compat rather than Class::C3.
        - Added '0+' overloading to solve the type constraint equality
          regression introduced when Moose 1.05 tightened the rules
          determing type constraint equality.  Added tests for the
          regression.

0.21    Thu Dec 24 00:21:26 EST 2009
        - Attempting to import a non-existent type from a combined type
          library gave a very confusing error message from the
          MooseX::Types::Combined internals. Now it gives you a much more
          useful message. (Dave Rolsky)
        - bump up Moose dep (RT#53016)

0.20    Thu Sep 10 22:34:48 EDT 2009
        - fix "empty export" warning (doy).

0.19    Sun Aug 23 15:03:02 EDT 2009
        - un-fix coercions on parameterized types, since it broke
          MooseX::Method::Signatures, as well as any other code that relied on
          new type constraint objects being generated each time a type was
          parameterized (hdp).

0.18    Sat Aug 22 12:50:42 EDT 2009
        - fix coercions on parameterized types (Hans Dieter Pearcey).

0.17    Tue Aug 18 02:32:31 EDT 2009
        - Documentation typo fix (Dave Rolsky).
        - Stop blowing up in has_available_type_export if the introspected code
          symbol exists but is not a type export (Florian Ragwitz).
        - Reorganize author/copyright sections at the request of Debian
          packagers (Rafael Kitover).

0.16    Mon Jun 29 10:50:41 PDT 2009
        - Ship with Module::Install 0.91

0.15    Sun Jun 27 15:50:00 EDT 2009
        - Change all uses of croak in TypeDecorator to use the Moose
          throw_exception method.