@@ -2,7 +2,6 @@ BEGIN {
 	use strict;
 	use warnings;
 	use Test::More;
-    use Test::Exception;
     use FindBin;
     use lib "$FindBin::Bin/lib";   
     
