@@ -5,7 +5,7 @@ use FindBin;
 use lib "$FindBin::Bin/lib";   
 
 use Test::More tests => 5;
-use Test::Exception;
+use Test::Fatal;
 
 BEGIN { use_ok 'Combined', qw/Foo2Alias MTFNPY NonEmptyStr/ }
 
@@ -18,6 +18,6 @@ ok MTFNPY;
 is NonEmptyStr->name, 'TestLibrary2::NonEmptyStr',
     'precedence for conflicting types is correct';
 
-throws_ok { Combined->import('NonExistentType') }
+like exception { Combined->import('NonExistentType') },
 qr/\Qmain asked for a type (NonExistentType) which is not found in any of the type libraries (TestLibrary TestLibrary2) combined by Combined/,
 'asking for a non-existent type from a combined type library gives a useful error';
